@@ -44,6 +44,8 @@ provides:
   grafana-source:
     interface: grafana-source
     scope: global
+  user-group:
+    interface: user-group
 
 resources:
   etcd:
