@@ -8,6 +8,8 @@ Unreleased
 ----------
 
 - add labels to Fluentbit logs: cluster-name, partition-name, hostname, service
+- add user-group relation to create user and group on the system
+
 
 0.8.2 - 2021-10-13
 ------------------
